changes since 1.0 (02.06.04):

added:
- Documentation for BALLView in the folder BALL/doc/BALLView
- Stereo Modi: Side-by-Side and for shutter googles 
- Clipping Planes
- Writing and loading of BALLView project files
- Hotkey support for starting any (BALL-)Python command from BALLView
- new application: DCD2PNG to create series of PNG-images from a DCD trajectory file
- DataSetControl:
	management of 1D and 2D grids 
  ability to start visualisation of 1D and 2D grids
  ability to load the SnapShot from file into RAM to accelerate their visualisation
- 1D and 2D RegularDataWidgets update their contents automaticaly
- Ramachandran Plot
- Ability to create animations, either as on-screen presentations or for movies
- Fog in Scene and its settings to Preferences
- new model: visualisation of forces
- Benchmark scripts for BALLView
- Visualisation for double-, triple- and aromatic bonds in BallAndStick model
- Preferences for material parameters in OpenGL
- added more classes to the Python SIP interface

fixed:
- selection in MolecularControl with CRTG and SHIFT modifier
- Cartoon model had problems with missing atoms 
- creation of models for several selected items
- overall cleanup of RegularDataWidgets
- export of PNGs could result in strange problems e.g. with empty images
- it was possible to delete molecular entities while simulation was running -> core dump
- its now possible to create transparent wireframe and dot models
- AtomDistanceColorProcessor
- PeptideDialog: deletion of sequence
- problem with normals in Cartoon model
- increased performance of SnapShot visualisation, especially for large numbers of SnapShots
- SnapShotVisualisation Dialog could cause core dump
- DatasetControl could cause core dump, after deleting trajectory when 
	SnapShotVisualisation Dialog was still open
- A click on the "default" button in Preferences now only works on currently selected page
- it was not possible to reset the Element-Coloring-Scheme to the default values 