@@ -50,6 +50,10 @@ In the Rotate Mode, the user can zoom, rotate or translate the view by pressing 
       <td>Right</td>
       <td>Translate up/down and left/right</td>
     </tr>	
+    <tr>
+      <td>Left + Right</td>
+      <td>Rotate (counter) clockwise</td>
+    </tr>	
   </tbody>
 </table>
 
@@ -73,6 +77,10 @@ For users with less then three mouse buttons exist special combinations, so that
     <tr>
       <td>Left + Control</td>
       <td>Translate up/down and left/right</td>
+    </tr>	
+    <tr>
+      <td>Left + Shift + Control</td>
+      <td>Rotate (counter) clockwise</td>
     </tr>	
   </tbody>
 </table>
